language_tests/source_files/valid/blanket_impl_ref_eq_ref_value.tr
func main() {
    let x = 1
    let rx = &x
    assert(rx == x, "&T should compare with T")
    std.print("ok\n")
}
