language_tests/source_files/invalid/bitand_float_type_error.tr
func main() {
    let x = 1.0 & 2.0
    std.print("done\n")
}
